fix(search) line is now visible

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -502,10 +502,11 @@ gn-wps-process-form label, [sxt-main-viewer] .panel-tools gn-wps-process-form la
     .gn-sort-by {
       float: right;
       .pull-right {
-        margin-top: 0;
-        height: 2.8em;
+        margin-top: 0.2em;
+        height: 1.2em;
+        padding-bottom: 0.5em;
         .btn {
-          height: 2.8em;
+          height: 1.2em;
         }
       }
     }
